update: DOMPurify更版，搬到vendor

--- a/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/Layouts/_Layout.cshtml
+++ b/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/Layouts/_Layout.cshtml
@@ -9,6 +9,7 @@
     @*<link rel="stylesheet" href="~/themes/feature/toolkit/css/bulma.min.css">*@
     <script type="text/javascript" src="~/themes/feature/toolkit/js/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="~/themes/feature/toolkit/js/combine.min.js"></script>
+    <script type="text/javascript" src="~/themes/feature/toolkit/js/purify.min.js"></script>
     <!-- #START RenderSection: Head -->
     @RenderSection("Head")
     <!-- #END RenderSection: Head -->
