--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -36,6 +36,7 @@
     <!-- override-->
     <!-- library -->
     @RenderAssetsService.Current.Scripts("/themes/foundation/basic/combine.min.js")
+    @RenderAssetsService.Current.Scripts("/themes/vendor/domPurify/purify.min.js")
     <!-- #START RenderSection: Head -->
     @RenderSection("Head", false)
     <!-- #END RenderSection: Head -->
