update: 調整多餘>符號

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -159,7 +159,7 @@
         <div class="c-modal__action">
             <div class="l-action l-action--inline">
                 <div class="l-action__item">
-                    <a href="@WebKycLink" class="o-btn o-btn--primary o-btn" id="GoKycBtn" target="_blank" rel="noopener noreferrer">>進行風險屬性評估</a>
+                    <a href="@WebKycLink" class="o-btn o-btn--primary o-btn" id="GoKycBtn" target="_blank" rel="noopener noreferrer">進行風險屬性評估</a>
                 </div>
             </div>
         </div>
